--- a/src/BKind.Web/wwwroot/css/main.css
+++ b/src/BKind.Web/wwwroot/css/main.css
@@ -5974,13 +5974,13 @@ body.secondary {
   body.secondary main {
     flex: 1; }
 
-/*.ra-banner {
-    height: 500px;
-    background-image: url('../images/free-happy-wallpapers.jpg');
-    background-repeat: no-repeat;
-    background-position: center 85%;
-    background-size: 100%;
-}*/
+.ra-banner {
+  height: 300px;
+  background-image: url("../images/home_bg_3.png");
+  background-repeat: no-repeat;
+  background-position: center 85%;
+  background-size: 100%; }
+
 aside[role=article] .side-widget h5 {
   text-transform: uppercase;
   border-bottom: 1px solid #ccc; }
@@ -6049,6 +6049,11 @@ footer[role=main] {
   color: #8ABF51; }
   .story-group.green .ra-story h2 a:hover {
     border-bottom: 1px solid #8ABF51; }
+
+@media (max-width: 576px) {
+  .ra-page-trimmed .ra-search-share,
+  .ra-page-trimmed aside {
+    display: none; } }
 
 .card {
   border-radius: 0;
